added user edit page

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ django-crispy-forms == 1.11.2
 sendgrid == 6.7.1
 django-filter == 2.4.0
 python-decouple == 3.4
+dj-database-url
+gunicorn
+psycopg2
+pytz
+whitenoise
