--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ gunicorn==20.1.0
 mysqlclient==2.0.3
 Pillow==8.2.0
 psycopg2==2.9.1
-python-decouple==3.4
+django-decouple==2.1
 python-dotenv==0.17.1
 python-http-client==3.3.2
 pytz==2021.1
@@ -17,4 +17,4 @@ sqlparse==0.4.1
 starkbank-ecdsa==1.1.1
 whitenoise==5.3.0
 django-heroku == 0.3.1
-djangorestframework
+djangorestframework~=3.12.4
